[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["SeiyaIwabuchi <0123ook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
